# wso2-wsf-cpp-gg

./: README.md  configure.ac
src/main/: Makefile.am
wsf_c/axis2c/: configure.ac
wsf_c/axis2c/axiom/: configure.ac
wsf_c/axis2c/axiom/src/: Makefile.am
wsf_c/axis2c/axiom/src/xpath/: Makefile.am
wsf_c/axis2c/guththila/: configure.ac
wsf_c/axis2c/neethi/: configure.ac
wsf_c/axis2c/neethi/src/: Makefile.am
wsf_c/axis2c/samples/: configure.ac
wsf_c/axis2c/src/core/: Makefile.am
wsf_c/axis2c/src/core/engine/: Makefile.am
wsf_c/axis2c/src/core/transport/http/common/: Makefile.am
wsf_c/axis2c/src/core/transport/http/receiver/: Makefile.am
wsf_c/axis2c/src/core/transport/http/sender/: Makefile.am
wsf_c/axis2c/src/core/transport/http/server/simple_axis2_server/: Makefile.am
wsf_c/axis2c/tools/md5/: configure.ac
wsf_c/axis2c/tools/tcpmon/: configure.ac
wsf_c/axis2c/util/: configure.ac
wsf_c/axis2c/util/src/: Makefile.am
wsf_c/rampartc/: configure.ac
wsf_c/rampartc/src/util/: Makefile.am
wsf_c/sandesha2c/: configure.ac
wsf_c/savanc/: configure.ac
wsf_c/savanc/src/subs_mgrs/sqlite/: Makefile.am
wsf_c/savanc/src/util/: Makefile.am
wsf_c/wsclient/: configure.ac
wsf_c/wsclient/src/: option.h  stub.c
